Reactive JWT implementation