@@ -1,7 +1,8 @@
 package pl.devzyra.librotecareactivestack.bootstrap;
 
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.boot.CommandLineRunner;
+import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.event.EventListener;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 import pl.devzyra.librotecareactivestack.entities.Author;
@@ -10,12 +11,12 @@ import pl.devzyra.librotecareactivestack.entities.UserDocument;
 import pl.devzyra.librotecareactivestack.repositories.BookElasticReactiveRepository;
 import pl.devzyra.librotecareactivestack.repositories.UserElasticReactiveRepository;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 @Slf4j
 @Component
-public class DataLoad implements CommandLineRunner {
+public class DataLoad {
 
     private final BookElasticReactiveRepository bookRepository;
     private final UserElasticReactiveRepository userRepository;
@@ -25,8 +26,8 @@ public class DataLoad implements CommandLineRunner {
         this.userRepository = userRepository;
     }
 
-    @Override
-    public void run(String... args) throws Exception {
+    @EventListener(ApplicationReadyEvent.class)
+    public void initialize() {
 
         bookRepository.deleteAll().subscribe();
         userRepository.deleteAll().subscribe();
@@ -37,12 +38,12 @@ public class DataLoad implements CommandLineRunner {
         userRepository.save(UserDocument.builder()
                 .firstname("admin").lastname("admin")
                 .email("admin").encryptedPassword("{bcrypt}$2a$10$X/GEwCWons1vyPEz08UaUer85yXPApzc8MuCYTghx4XqqgNuP5QFS")
-                .roles(Collections.singleton(new SimpleGrantedAuthority("ROLE_ADMIN")))
+                .roles(Set.of(new SimpleGrantedAuthority("ROLE_ADMIN"),new SimpleGrantedAuthority("ROLE_USER")))
                 .build())
-                .subscribe( user -> log.info("User: {}", user));
+                .block();
 
         System.out.println("### Data Loaded ###");
-        System.out.println("Book repository count:" + bookRepository.count().block());
-        System.out.println("User repository count:" + userRepository.count().block());
+        bookRepository.count().subscribe(count -> System.out.println("Book repository count: " + count));
+        userRepository.count().subscribe(count -> System.out.println("User repository count: " + count));
     }
 }
